update style to fix ads on small screens

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -33,12 +33,12 @@ $lg-max: ($xl-min - 1);
 
 .print-item {
   list-style-type: none;
-  max-height:150px ;
   height: 100%;
   overflow: hidden;
   display: list-item;
   a {
     height: 100%;
+    max-height:160px ;
     display: flex;
     align-items: center;
     img, h2.card-title {
@@ -46,18 +46,30 @@ $lg-max: ($xl-min - 1);
     }
   }
   @media screen and (max-width: $md-max) {
-    a h2.card-title { font-size: 1rem; max-width:100%;  }
+    a h2.card-title { 
+      font-size: 1rem; 
+      max-width:100%;  
+    }
   }
   @media screen and (max-width: $lg-max) {
-    max-height:150px ;
+    a img { 
+      max-height: 130px; 
+    }
   }
   @media screen and (max-width: $sm-max) {
-    a img { max-height: 80% !important; max-width:100% }
-    a { flex-direction: column; }
-    max-height:160px ;
-    a h2.card-title { white-space: nowrap; text-overflow: ellipsis; overflow: hidden;}
-    // a h2.card-title { font-size: 0.8rem; }
-    // max-height:100px ;
+    max-height:unset ;
+    a img { 
+      max-height: 110px; 
+      max-width:100% 
+    }
+    a { 
+      flex-direction: column; 
+    }
+    a h2.card-title { 
+      text-overflow: ellipsis; 
+      overflow: hidden;      
+      font-size: 0.8rem; 
+    }
   }
   @media screen and (max-width: $xs-max) {
     // max-height:130px ;
@@ -155,6 +167,12 @@ section.recent-posts {
   display: inline-block;
   padding-bottom: 20px;
   margin-bottom: -1px;
+
+  @media screen and (max-width: $xs-min) {
+  &.shrink-to-fit {
+      font-size:80%;
+    }
+  }
 }
 
 .article-post ol,
